--- a/css/app.css
+++ b/css/app.css
@@ -1299,8 +1299,7 @@ body.selectbox--open .selectbox__content {
   padding: 2em;
   margin: 1.5em;
   clear: both;
-  background-color: #3b3d48;
-  border: 0.3em solid transparent;
+  border: 0.3em dashed #3b3d48;
 }
 .category-full__more > span {
   font-size: 1.2em;
