--- a/css/app.css
+++ b/css/app.css
@@ -280,6 +280,9 @@ ul {
      -moz-border-radius: 0.3em;
           border-radius: 0.3em;
 }
+.menu__item.active:before {
+  display: block;
+}
 .menu__ico {
   margin-right: 1em;
   width: 1.8em;
