--- a/css/app.css
+++ b/css/app.css
@@ -2580,8 +2580,9 @@ body.selectbox--open .selectbox__content {
   margin-bottom: 1.4em;
 }
 .videos__torrent-title {
-  font-size: 1.6em;
+  font-size: 1.4em;
   padding: 15px;
+  line-height: 1.3;
 }
 .videos__torrent .videos__item-title {
   padding: 11px 15px;
